k8S/instituto-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instituto-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: institutoservice
  template:
    metadata:
      labels:
        app: institutoservice
    spec:
      containers:
        - name: institutoservice
          image: rusok/centralizadorapi
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: instituto-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: institutoservice
  ports:
    - name: institutoservice
      protocol: TCP
      port: 80
      targetPort: 80
