k8S/ingress-para-nginx-servicio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-servicio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pepe.com
      http:
        paths:
         - path: /api/estudiante
           pathType: Prefix
           backend:
             service:
               name: instituto-clusterip-service
               port:
                 number: 80
         - path: /api/estudiantes
           pathType: Prefix
           backend:
             service:
               name: campus-clusterip-service
               port:
                 number: 80
